fix refresh bug on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -40,4 +40,6 @@ html,
 body {
   height: 100%;
   overflow: hidden;
+  overscroll-behavior-y: contain;
+  touch-action: none;
 }
